# pdf2docx-plus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: metrics.py  run.py
bench/corpus/awhkef/: expected_text.txt
bench/corpus/first_sentier/: expected_text.txt
bench/corpus/kfs_bosera/: expected_text.txt
pdf2docx_plus/: __init__.py  api.py  cli.py  consolidate.py  errors.py  logging.py  server.py  version.py
pdf2docx_plus/_vendored/: __init__.py
pdf2docx_plus/_vendored/pdf2docx/gui/: MainFrame.py
pdf2docx_plus/_vendored/pdf2docx/image/: ImagesExtractor.py
pdf2docx_plus/_vendored/pdf2docx/page/: RawPageFitz.py
pdf2docx_plus/backends/: __init__.py
pdf2docx_plus/emit/: __init__.py  headers_footers.py  lists.py  page_breaks.py  page_footer.py  sections.py  table_fit.py  tables_cleanup.py  whitespace.py  word_spacing.py
pdf2docx_plus/fidelity/: __init__.py  crashguards.py  hyperlink.py  styles.py  symbols.py  text.py  tty.py
pdf2docx_plus/hooks/: __init__.py  formula_ocr.py  layout_detection.py  ocr.py  table_transformer.py
pdf2docx_plus/images/: __init__.py  recovery.py
pdf2docx_plus/layout/: __init__.py  hf_detect.py  lists.py  scanned.py
pdf2docx_plus/plugins/: __init__.py  base.py  registry.py
pdf2docx_plus/styles/: __init__.py
pdf2docx_plus/tables/: __init__.py  float_images.py  stitch.py
scripts/: test.sh
tests/: conftest.py  test_api.py  test_backends.py  test_consolidate.py  test_emit_lists.py  test_empty_sections.py  test_errors.py  test_fidelity.py  test_fillin_lines.py  test_image_flip.py  test_layout.py  test_metrics.py  test_page_footer.py  test_plugins.py  test_resolve_output.py  test_rotation.py  test_section_flattening.py  test_styles.py  test_symbols.py  test_table_fit.py  test_tables_cleanup.py  test_whitespace.py  test_word_spacing.py
